# cpp

./: .gitignore  README.md  WORKSPACE
Amar/: Assembly.md  README.md
Amar/ch01/a.range-loop/: diff-by-assembler.md  range-loop.cpp  range-loop.md  range-loop.s  raw-loop.cpp  raw-loop.md  raw-loop.s
Amar/ch01/b.ring-buffer/: ring-buffer-class-impl.cpp  ring-buffer-class-impl.s  ring-buffer-class.cpp  ring-buffer-class.h  ring-buffer-class.s  ring-buffer-clike-impl.cpp  ring-buffer-clike-impl.s  ring-buffer-clike.cpp  ring-buffer-clike.h  ring-buffer-clike.s  ring-buffer-template.cpp  ring-buffer-template.h  ring-buffer-template.s  ring-buffer.md
Bjarne/cpp4/ch06/: README.md
Bjarne/cpp4/ch17/: README.md  entity.cpp  entity.h  entity_test.cpp
Bjarne/ppp3/: README.md  progress.md  terms.md
Bjarne/ppp3/ch01/: build.sh  hello_world.cpp
Bjarne/ppp3/ch02/: arithmetic_operators.cpp  ch02.md  cin_sensitive_to_type.cpp  detect_repeated_word.cpp  drill.cpp  ex04.cpp  ex06.cpp  ex07.cpp  narrowing.cpp  test_driven.md
Bjarne/ppp3/ch03/: bleep.cpp  ex04.cpp  ex06.cpp  ex10.cpp  ex12.cpp  ex13.cpp  ex15.cpp  ex17.cpp  ex18.cpp  stat_basis.md  types.md
Bjarne/ppp3/ch04/: ex11.cpp
Bjarne/ppp3/ch05/: arithmetic_grammar.md  calc01.cpp  calc01.md  ex01.cpp  review.md
Bjarne/prog2/: .gitignore  CMakeLists.txt
Bjarne/prog2/ch03/: README.md
Bjarne/prog2/ch04/: README.md
Bjarne/prog2/ch05/: README.md
Bjarne/prog2/ch06/: README.md  parser.cpp  parser.h
Bjarne/prog2/ch17/: README.md  type_size.cpp  type_size.h  type_size_ut.cpp
Bjarne/prog2/ch18/: README.md  drill.cpp  drill.h  drill_ut.cpp  exercise.cpp  exercise.h  exercise_ut.cpp  vector.cpp  vector.h  x.h  x_ut.cpp
Bjarne/prog2/ch19/: README.md  drill.h  drill_ut.cpp  exercise.h  exercise_ut.cpp  file_handle.h  template.cpp  uniq_file_ut.cpp  vector.h  vector_ptr.h  vector_ptr_ut.cpp  vector_ut.cpp
Bjarne/prog2/ch20/: README.md  alloc_vector.h  int_char.h  mem.h  mem_vector.h  uniq_vector.h  uniq_vector_ut.cpp  vector_ut.cpp
Bjarne/prog2/ch26/: README.md  binary_search.h  binary_search_ut.cpp
Bjarne/prog2/main/: CMakeLists.txt
Bjarne/prog2/main/ch18/: CMakeLists.txt  drill.cpp  exercise.cpp  exercise_main.cpp  vector.cpp
Bjarne/prog2/test/: CMakeLists.txt  sniff.cpp
Bjarne/prog2/test/ch18/: CMakeLists.txt  drill_ut.cpp  exercise_ut.cpp  x_test.cpp  x_ut.cpp
Bjarne/prog2/test/ch19/: CMakeLists.txt  drill_ut.cpp  exercise_ut.cpp  uniq_file_ut.cpp  vector_ptr_ut.cpp  vector_ut.cpp
Bjarne/prog2/test/ch20/: CMakeLists.txt  alloc_vector_ut.cpp  int_char.h  uniq_vector_ut.cpp  vector_ut.cpp
Bjarne/prog3/: README.md
Lakos/embrace/: README.md
Lakos/embrace/ch01/: README.md  decltype.md
Lakos/embrace/ch02/: README.md
Lakos/embrace/ch03/: README.md
Meyers/: README.md
Meyers/emcpp/: CMakeLists.txt
Meyers/emcpp/main/: CMakeLists.txt
Meyers/emcpp/test/: CMakeLists.txt
Meyers/empower/ch01/: README.md  item01.md  item01_ut.cpp  item02.md  item02_ut.cpp  item03.md
Meyers/empower/ch02/: README.md
Meyers/empower/ch03/: README.md  item07.md  item07_ut.cpp  item14.md  item15.md  item17.md
Meyers/empower/ch04/: README.md  item18.md  item19.md  item20.md  item21.md
Meyers/empower/ch05/: README.md  item23.md  item23_ut.cpp  item24.md  item24_ut.cpp  item25.md
Meyers/empower/ch06/: item32.md
basics/: basic_concepts.md
basics/concept/: README.md  array.cpp  multiply.cpp  myarray.cpp  myarray.h
basics/const/: README.md  constant.cpp
basics/container/: deque1.cpp
basics/include/my/: hijack.h
basics/lifetime/: README.md  lifetime  lifetime.cpp  memory.md  resource.cpp  vector.cpp  vector.h
basics/lifetime2/: README.md  lifetime2.cpp
basics/module/: README.md
basics/range/adaptor/: README.md  adaptor.cpp
basics/range/dangling/: README.md  dangling.cpp
basics/reference/: README.md  ref_ut.cpp  ref_wrap_ut.cpp  thread_args_ut.cpp
basics/storage_class/: README.md  storage_class.cpp
basics/template/constexpr/: README.md  distance.cpp  factorial.cpp  factorial1.cpp  factorial2.cpp
basics/template/deduction/: README.md  ctad.cpp
basics/template/variadic/: README.md  folding.cpp
basics/value_category/: README.md  value_categories.cpp
building/bazel/: INSTALL.md
building/bazel/stage1/: README.md
building/bazel/stage2/: README.md
building/bazel/stage3/: README.md
building/cmake/: README.md
building/cmake/ch01/: README.md
building/cmake/ch02/: README.md
building/cmake/ch04/: README.md
building/cmake/ch08/04-gtest/test/: CMakeLists.txt
building/cmake/ch12/: README.md
building/cmake/guide/: FIND_PACK.md  README.md  TOOLCHAINS.md
building/cmake/tutorial/Step02/: CMakeLists.txt  README.md  tutorial.cxx
building/cmake/tutorial/Step02/MathFunctions/: mysqrt.cxx
building/cmake/tutorial/Step04/: CMakeLists.txt  README.md
building/cmake/tutorial/Step04/MathFunctions/: CMakeLists.txt
building/cmake/vscode/: READMD.md
building/compiler/basics/: SHARED_LIB.md  (+2 more)
building/conan/: README.md
building/vscode/: README.md  hello.cpp  range.cpp
concurrency/: README.md
concurrency/MIT6.005/: README.md
concurrency/bjarne.tour3/: 18.5_future.cpp  README.md
concurrency/coroutine/: README.md
concurrency/shah/: README.md  async.cpp  async_buffer.cpp  atomics.cpp  cond_var.cpp  thread2.cpp  thread3.cpp  thread4.cpp  thread5.cpp  thread6.cpp  try_lock.cpp
doctest/: README.md
gcc/: BUILD_GCC.md  HEADERS.md  README.md
lib/: README.md
lib/args/: README.md
lib/args/cxxopts/: CMakeLists.txt  README.md  conanfile.txt
lib/args/cxxopts/src/: main.cpp
lib/json/: README.md
lib/json/nlohmann/: CMakeLists.txt  README.md  conanfile.txt
lib/json/nlohmann/src/: tutorial1.cpp
lib/yaml/: README.md
my/hijack/: hijack.hpp  test.cpp
qt/doc/: BUILD.md  lib1.txt
study/lang_basics/: declarations.md
study/ordering/: ordering.md
study/rvalue/: binding.cpp  binding.s  expand.cpp  expand.md  expand.s  rvalue.md  swap.cpp
study/template/: advanced.md  fundamentals.md  pack.md
testing/gtest/: README.md
testing/ut/cmake/src/quick_check/: CMakeLists.txt
(+218 files in other folders)
